Thu May 28 13:49:37 GMT 2015  Olly Betts <olly@survex.com>

	* api/query.cc,api/queryinternal.cc,api/queryinternal.h,
	  include/xapian/query.h,include/xapian/unicode.h,unicode/uniParse.tcl,
	  unicode/utf8itor.cc: Add attributes where appropriate.

Thu May 28 10:37:32 GMT 2015  Olly Betts <olly@survex.com>

	* generate-exceptions,include/xapian/: Remove XAPIAN_PURE_FUNCTION
	  from functions which could throw an exception (which aren't really
	  pure).  While we're happy for calls to these functions to be CSE-ed,
	  the compiler might more assumptions about a pure function - clang
	  seems to assume pure => nothrow for example.

Wed May 27 02:05:23 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Update.

Tue May 26 23:15:21 GMT 2015  Olly Betts <olly@survex.com>

	* AUTHORS: Update.

Tue May 26 23:12:53 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Credit Mihai Bivol for Xapian::Snipper in 1.3.2 changes.

Tue May 26 06:14:22 GMT 2015  Olly Betts <olly@survex.com>

	* include/xapian/intrusive_ptr.h,tests/api_none.cc: Fix issue with 
	  the optional reference counting where the reference count of a
	  non-reference counted and deleted object could get checked to
	  see if the object was reference counted.

Mon May 25 04:33:15 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Update.

Sun May 24 12:52:47 GMT 2015  Olly Betts <olly@survex.com>

	* tests/api_postingsource.cc: timer_create() seems to always fail on
	  AIX with EAGAIN, so just skip the matchtimelimit1 testcase there.

Sun May 24 11:48:30 GMT 2015  Olly Betts <olly@survex.com>

	* net/tcpserver.cc: Under __WIN32__, inet_ntop()'s second parameter
	  is 'void*' (to POSIX says it should be 'const void*').

Sun May 24 11:46:25 GMT 2015  Olly Betts <olly@survex.com>

	* common/safenetdb.h: Under __WIN32__, MSDN says that newer platforms
	  need <ws2def.h> for AI_* constants.  And mingw doesn't seem to
	  define AI_NUMERICSERV yet.

Sun May 24 10:41:39 GMT 2015  Olly Betts <olly@survex.com>
